<resources>
    <string name="app_name">VingeApp</string>

    <string name="simple_ime">VingeApp</string>
    <string name="subtype_en_US">English (US)</string>


    <string name="ime_name">Sample Soft Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>

    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
    <string name="wizard_step_previous_step_not_complete_title">Previous setup step is not complete</string>
    <string name="wizard_step_previous_step_not_complete_text">Please swipe to the previous step, and follow the instructions.</string>

    <string name="wizard_step_this_step_complete_title">Step done!</string>
    <string name="wizard_step_this_step_complete_text_enabled"><i>Keyboard_App</i> is enabled. You are only one step away from using <i>Keyboard_App</i> on your awesome device!</string>
    <string name="wizard_step_this_step_complete_text_switched"><i>Keyboard_App</i> is your default keyboard. </string>
    <string name="wizard_step_swipe_to_next">Swipe to the next page.</string>
    <string name="setup_wizard_step_one_title">Enable Keyboard</string>
    <string name="setup_wizard_step_small_sub_title">This is the first step, but don\'t worry, there are only three, very simple steps.</string>
    <string name="setup_wizard_step_one_details">In this step, you\'ll need to enable <i>AnySoftKeyboard</i>. Please check <i>\'AnySoftKeyboard\'</i> in your <i>Language&amp;Input settings</i>. This will allow us to run on your device.</string>
    <string name="setup_wizard_step_one_action">Go to your <i>Language&amp;Input settings</i>…</string>
    <string name="setup_wizard_step_one_action_error_no_settings_activity">Error: Your device does not support 3rd-party keyboards. AnySoftKeyboard can not be activated!</string>

    <string name="setup_wizard_step_permissions_title">Enable Permissions</string>
    <string name="wizard_step_this_step_complete_text_permissions"><i>AnySoftKeyboard</i> has access to the extra permissions. This will give you additional level of personalization.</string>
    <string name="setup_wizard_step_permissions_details">In this step, you\'ll can approve <i>AnySoftKeyboard</i> access to the contacts stored on your device. If you wish to block this access, you may disable Contacts Dictionary.</string>

    <string name="setup_wizard_top_title">Setup\nAnySoftKeyboard\nfor use</string>
    <string name="setup_wizard_step_two_title">Switch to Keyboard_App</string>
    <string name="setup_wizard_step_two_small_sub_title">Step two of three</string>
    <string name="setup_wizard_step_two_details">Your system can use <i>Keyboard_App</i> now, but it is not set as the active keyboard.\nBy switching, <i>Keyboard_App</i> will be your new on-screen keyboard, along with all its features!</string>
    <string name="setup_wizard_step_two_action">Switch active keyboards</string>
    <string name="setup_wizard_step_three_title">What\'s next</string>
    <string name="setup_wizard_step_three_details">Thank you for choosing <i>Smart Keyboard</i>.</string>
    <string name="setup_wizard_step_three_details_done"><b>You are done 🎉\nGo to you favorite app to try it out.</b></string>
    <string name="setup_wizard_step_three_details_actions">Or, you can customize and personalize the keyboard to your likings:</string>
    <string name="setup_wizard_step_three_action_languages">Setup languages…</string>
    <string name="setup_wizard_step_three_action_themes">Select theme…</string>
    <string name="setup_wizard_step_three_action_all_settings">Configure everything else…</string>
    <string name="ime_crashed_title">AnySoftKeyboard Crashed!</string>
    <string name="not_configured_with_click_here">Keyboard_APP is not fully set-up for use. Click here to set up.</string>
    <string name="not_configured_with_just_click_here">Click here</string>
    <string name="notification_read_contacts_title">Can I read your contacts?</string>
    <string name="contacts_permissions_dialog_message">Smart Keyboard is using your contacts\' names to provide you with a personalized word suggestion.</string>
    <string name="allow_permission">Allow</string>
    <string name="navigate_to_app_permissions">Go to App permissions</string>
    <string name="turn_off_contacts_dictionary">Turn off Contacts Dictionary</string>
    <string name="wizard_allow_contacts_permission">Allow contacts-based typing suggestions</string>
    <string name="read_more_about_permissions">Read more about permissions…</string>
    <string name="settings_key_use_contacts_dictionary">settings_key_use_contacts_dictionary</string>
    <string name="permissions_wiki_site_url">https://github.com/AnySoftKeyboard/AnySoftKeyboard/wiki/Why-Does-AnySoftKeyboard-Requires-Extra-Permissions</string>
    <string name="facebook_app_id">1464531870255176</string>
    <string name="google_api_key_">AIzaSyBj0Z3tm9nXmWzeqnO5TxkbrURkf6PFFvE</string>

    <string name="action_clear">Clear</string>
    <string name="action_circle">Draw Circle</string>
    <string name="action_overlay">Draw Overlay</string>
    <string name="action_polygon">Draw Polygon</string>
    <string name="action_traffic">Toggle Traffic</string>
    <string name="action_cycle_map_type">Cycle Map Type</string>

    <string name="dialog_play_services_unavailable">Google Play Services are unavailable.</string>
    <string name="dialog_download_play_services">Download Play Services</string>
    <string name="dialog_close_program">Close Program</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>


    <!--url preview constants-->
    <string name="empty" translatable="false" />
    <string name="insert_url">Insert a text containing an url</string>
    <string name="restart">Restart</string>
    <string name="about">About</string>
    <string name="preview_area">Preview Area</string>
    <string name="post_area">Post Area</string>
    <string name="no_urls">No urls has been found</string>
    <string name="failed_preview">Preview failed.\nClick to dismiss.</string>
    <string name="submit">Submit</string>
    <string name="random">Random</string>
    <string name="post">Post</string>
    <string name="previous">←</string>
    <string name="forward">→</string>
    <string name="choose_thumbnail">Choose a thumbnail</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="enter_title">Enter a title</string>
    <string name="enter_description">Enter a description</string>
    <string name="of">of</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!--url preview constants ends-->

</resources>